# dunsky

./: README.md
Desktop/DSI/projects/Other data/: sat_2021 and 2020.xlsx
Desktop/DSI/projects/Other data/Gov.uk data - a-level-and-other-16-to-18-results_2022-23/: data-guidance-dict.txt
Desktop/git/dunsky/handy_code/: time_series_plots.py  timeseries_modelling.py
Documents/GitHub/winefi-research-lab/: .gitignore  README.md  main.py  pyproject.toml
Documents/GitHub/winefi-research-lab/research_lab/utils/: analysis.py  bad_lwin11s.py  config.py  database.py  download_gilts_data.py  download_hpi_data.py  fetch_lx_index.py  utils.py  vintage_year_scores.py
